# HitchensRhetoricTransform

./: .replit  Pasted--Add-this-to-your-imports-at-the-top-import-FaCopy-FaCamera-from-react-icons-fa-Add-1732205819408.txt  Pasted-The-dropdown-for-API-providers-in-the-front-end-is-not-visible-likely-due-to-one-or-more-of-the-fol-1733748037018.txt  Pasted-To-fix-the-issue-with-displaying-the-API-provider-dropdown-ensure-the-availableProviders-array-is-1733748613100.txt  Pasted-TypeError-TypeError-expected-str-bytes-or-os-PathLike-object-not-NoneType-Traceback-most-rec-1733842053130.txt  README.md  admin.py  app.py  auth.py  extensions.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py
agent_assets/: ai_google_dev_gemini-api_docs_grounding.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  theme.js
frontend/src/components/: Navigation.jsx  ProtectedRoute.jsx  StyledSignature.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  History.jsx  Home.jsx  Login.jsx  Register.jsx
static/css/: style.css
static/js/: main.js
static/react/: index.html
static/react/assets/: index-14D1Kefs.js  index-6PWNyYw9.js  index-B1Vaqo6P.js  index-B1is5mw_.js  index-BGpa_hud.js  index-BR-Z16rr.js  index-BRtx_T7w.js  index-BS28IQ6R.js  index-BaF7olKY.js  index-ByEXiCG_.js  index-C37wt7gR.js  index-C3XdAOCW.js  index-C3bN19rY.js  index-C5SlZZcv.js  (+31 more)
templates/: base.html  history.html  index.html
utils/: gemini_helper.py  openai_helper.py  token.py  token_helper.py
