[project]
name = "repl-nix-hitchensrhetorictransform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.54.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "pyjwt>=2.10.0",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
]
